<resources>
    <string name="app_name">Acme Cafe</string>

    <string name="money">€</string>

    <string name="label_log">Log-in</string>
    <string name="label_name">Name:</string>
    <string name="label_username">User name:</string>
    <string name="label_password">Password:</string>
    <string name="label_credit_card">Credit Card</string>
    <string name="hint"> </string>

    <string name="label_card_type">Card type:</string>
    <string name="label_credit_card_number">Card number:</string>
    <string name="label_credit_card_title">Credit card</string>
    <string name="label_button_done">Done</string>
    <string name="label_button_return">Return</string>
    <string name="label_data">Expiration data:</string>
    <string name="hint_month">mm</string>
    <string name="hint_year">yy</string>

    <string name="label_button_sign_in">Sign-in</string>
    <string name="label_button_sign_up">Sign-up</string>
    <string name="title_activity_login_tab">Log in</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="label_button_add_to_order">Add</string>

    <string name="menu_menus">Menus</string>
    <string name="menus_empty">menus being updated…</string>
    <string name="dialog_item_details">Item details</string>
    <string name="label_price">price: </string>


    <string name="menu_order">Order</string>
    <string name="menu_transactions">Transactions</string>
    <string name="menu_vouchers">Vouchers</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_logout">Logout</string>

    <string name="list_items_empty">There are no items in stock…</string>
    <string name="list_order_empty">No items picked to order…</string>
    <string name="list_voucher_empty">No Vauchers picked to discount…</string>

    <string name="label_your_pin">Please take not of your pin!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_confrim_password">Re-type pass:</string>
    <string name="label_loging_in">logging in…</string>
    <string name="label_button_continue">OK</string>
    <string name="label_order">Order</string>
    <string name="quantity">Number:</string>
    <string name="menus_order">No menus added…</string>
    <string name="label_menu">menus</string>
    <string name="label_button_delete_in_order">remove</string>
    <string name="dialog_voucher_details">Voucher details</string>
    <string name="vouchers_empty">You have no vouchers…</string>
    <string name="nfc_send_msg">Touch and tap to send</string>
    <string name="label_next">next</string>
    <string name="label_back">back</string>
    <string name="label_button_nfc_send">NFC</string>
    <string name="label_button_qr_code">QR code</string>
    <string name="label_write_pin">Please introduce your pin code.</string>
    <string name="label_button_ok">OK</string>
    <string name="label_select_send_method">Select the send method</string>
    <string name="label_description">Description: </string>
    <string name="label_type">Type:</string>
    <string name="label_code">Code:</string>
    <string name="past_trasactions_empty">You never shoped in this cofe before… (or connection is down)</string>
    <string name="items_quantity">nº items:</string>
    <string name="items_price">Price:</string>
    <string name="vouchers_quantity">nº vouchers:</string>
    <string name="nan">NaN</string>
    <string name="date">date:</string>
</resources>
