<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/table_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:shrinkColumns="1"
        android:paddingTop="4dip">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dip"
            android:paddingRight="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_card_type"
                android:textAppearance="@android:style/TextAppearance"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_card_type" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dip"
            android:paddingRight="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_credit_card_number"
                android:textAppearance="@android:style/TextAppearance"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_card_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dip"
            android:paddingRight="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_data"
                android:textAppearance="@android:style/TextAppearance"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_month"/>

            <Spinner
                android:id="@+id/spinner_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_year"/>
        </TableRow>

        <Button
            android:id="@+id/button_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_button_done" />
    </TableLayout>


</FrameLayout>
