<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_send_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_select_send_method"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textSize="24sp"
        android:textAlignment="center"
        />

    <Button
        android:text="@string/label_button_nfc_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nfc_order" />
    <Button
        android:text="@string/label_button_qr_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/qr_code_order" />

</LinearLayout>