<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/table_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4dip"
        android:shrinkColumns="1"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dip"
            android:paddingRight="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_name"
                android:textAppearance="@android:style/TextAppearance"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dip"
            android:paddingRight="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_username"
                android:textAppearance="@android:style/TextAppearance"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dip"
            android:paddingRight="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_password"
                android:textAppearance="@android:style/TextAppearance"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dip"
            android:paddingRight="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_confrim_password"
                android:textAppearance="@android:style/TextAppearance"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dip"
            android:paddingRight="10dip">

            <Button
                android:id="@+id/button_field_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_credit_card" />

            <CheckBox
                android:id="@+id/check_credit_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false" />

        </TableRow>

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sign_up"
            android:text="@string/label_button_sign_up" />

        <TextView
            android:id="@+id/sign_in_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/label_button_sign_in"
            android:textStyle="bold"
            android:paddingTop="5dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"/>
    </TableLayout>
</FrameLayout>